{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 62,
  "lineage": "15d925b4-e6f3-6f32-ca37-a0851786cc3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:502207623589:loadbalancer/terra-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terra-elb-1197649171.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-054be94ef0bd41b09",
              "i-0a4c6eb357439e29b",
              "i-0f9d5f2382d80f485"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-084844673a37ad9c9"
            ],
            "source_security_group": "502207623589/Allow_HTTP__new",
            "source_security_group_id": "sg-084844673a37ad9c9",
            "subnets": [
              "subnet-066bf279f78aeebd3",
              "subnet-06bdf963490f24fdc",
              "subnet-095510eafc201083d"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.web_sg",
            "aws_subnet.tf_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:502207623589:instance/i-054be94ef0bd41b09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054be94ef0bd41b09",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-08bfc50df8adf885e",
            "private_dns": "ip-20-0-1-82.ec2.internal",
            "private_ip": "20.0.1.82",
            "public_ip": "18.205.236.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0acd9f95e066e0db1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-084844673a37ad9c9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066bf279f78aeebd3",
            "tags": {
              "Name": "webserver_tf-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084844673a37ad9c9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.tf_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:502207623589:instance/i-0a4c6eb357439e29b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4c6eb357439e29b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3b7f00d5737c105",
            "private_dns": "ip-20-0-2-197.ec2.internal",
            "private_ip": "20.0.2.197",
            "public_ip": "18.232.167.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-053a2ea840afeaefa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-084844673a37ad9c9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095510eafc201083d",
            "tags": {
              "Name": "webserver_tf-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084844673a37ad9c9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.tf_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:502207623589:instance/i-0f9d5f2382d80f485",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9d5f2382d80f485",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0d65e5b88541e1102",
            "private_dns": "ip-20-0-3-20.ec2.internal",
            "private_ip": "20.0.3.20",
            "public_ip": "3.235.87.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066b424601f59793f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-084844673a37ad9c9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bdf963490f24fdc",
            "tags": {
              "Name": "webserver_tf-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-084844673a37ad9c9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.tf_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e1da1e609f55e017",
            "owner_id": "502207623589",
            "tags": {
              "Name": "terraform_IG"
            },
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b829a5b2503f0fcf",
            "owner_id": "502207623589",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1da1e609f55e017",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_PublicRT"
            },
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095b2edfe02b0e20c",
            "route_table_id": "rtb-0b829a5b2503f0fcf",
            "subnet_id": "subnet-066bf279f78aeebd3"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea27aaf65e3fbdd4",
            "route_table_id": "rtb-0b829a5b2503f0fcf",
            "subnet_id": "subnet-095510eafc201083d"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76a3e078ba74102",
            "route_table_id": "rtb-0b829a5b2503f0fcf",
            "subnet_id": "subnet-06bdf963490f24fdc"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:security-group/sg-06271233a6f5614c0",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06271233a6f5614c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "125.16.91.5/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": null,
            "owner_id": "502207623589",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:security-group/sg-084844673a37ad9c9",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084844673a37ad9c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "125.16.91.5/32"
                ],
                "description": "Access from my IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow_HTTP__new",
            "name_prefix": null,
            "owner_id": "502207623589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:subnet/subnet-066bf279f78aeebd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-066bf279f78aeebd3",
            "map_public_ip_on_launch": true,
            "owner_id": "502207623589",
            "tags": {
              "Name": "tf_subnet-1"
            },
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:subnet/subnet-095510eafc201083d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-095510eafc201083d",
            "map_public_ip_on_launch": true,
            "owner_id": "502207623589",
            "tags": {
              "Name": "tf_subnet-2"
            },
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:subnet/subnet-06bdf963490f24fdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.3.0/24",
            "id": "subnet-06bdf963490f24fdc",
            "map_public_ip_on_launch": true,
            "owner_id": "502207623589",
            "tags": {
              "Name": "tf_subnet-3"
            },
            "vpc_id": "vpc-0475aec5f8d848f7e"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502207623589:vpc/vpc-0475aec5f8d848f7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-08c702d303a6a4707",
            "default_route_table_id": "rtb-05163234b692e07e7",
            "default_security_group_id": "sg-01afe728e5709a241",
            "dhcp_options_id": "dopt-1d66c167",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0475aec5f8d848f7e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05163234b692e07e7",
            "owner_id": "502207623589",
            "tags": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}